fix pane on mobile and display font on webkit

--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,10 @@
 body {
   @apply font-zed bg-zinc-50 text-black transition-all duration-300;
 }
-
+.font-display{
+  font-style: italic;
+  font-weight: 200;
+}
 .unblur-in {
   filter: blur(8px);
   opacity: 0;
